traefik.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: kube-ingress

# ---
# # Source: traefik/templates/dashboard-hook-ingressroute.yaml
# apiVersion: traefik.containo.us/v1alpha1
# kind: IngressRoute
# metadata:
#   name: traefik-dashboard
#   namespace: kube-ingress
#   annotations:
#     helm.sh/hook: "post-install,post-upgrade"
#   labels:
#     app.kubernetes.io/name: traefik
#     helm.sh/chart: traefik-10.3.2
#     app.kubernetes.io/managed-by: Helm
#     app.kubernetes.io/instance: traefik
# spec:
#   entryPoints:
#     - traefik
#   routes:
#   - match: PathPrefix(`/dashboard`) || PathPrefix(`/`)
#     kind: Rule
#     services:
#     - name: api@internal
#       kind: TraefikService

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: traefik
  namespace: kube-ingress
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
    - host: traefik.example.in
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: traefik
                port:
                  number: 9000

---
# Source: traefik/templates/deployment.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: traefik
  namespace: kube-ingress
  labels:
    app.kubernetes.io/name: traefik
    helm.sh/chart: traefik-10.3.2
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/instance: traefik
  annotations:
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: traefik
      app.kubernetes.io/instance: traefik
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  template:
    metadata:
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/path: "/metrics"
        prometheus.io/port: "9100"
      labels:
        app.kubernetes.io/name: traefik
        helm.sh/chart: traefik-10.3.2
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/instance: traefik
    spec:
      serviceAccountName: traefik
      terminationGracePeriodSeconds: 60
      hostNetwork: false
      containers:
      - image: "traefik:2.5.1"
        imagePullPolicy: IfNotPresent
        name: traefik
        resources:
        readinessProbe:
          httpGet:
            path: /ping
            port: 9000
          failureThreshold: 1
          initialDelaySeconds: 10
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 2
        livenessProbe:
          httpGet:
            path: /ping
            port: 9000
          failureThreshold: 3
          initialDelaySeconds: 10
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 2
        ports:
        - name: "metrics"
          containerPort: 9100
          protocol: "TCP"
        - name: "traefik"
          containerPort: 9000
          protocol: "TCP"
        - name: "web"
          containerPort: 8000
          protocol: "TCP"
        - name: "websecure"
          containerPort: 8443
          protocol: "TCP"
        securityContext:
          capabilities:
            drop:
            - ALL
          readOnlyRootFilesystem: true
          runAsGroup: 65532
          runAsNonRoot: true
          runAsUser: 65532
        volumeMounts:
          - name: data
            mountPath: /data
          - name: tmp
            mountPath: /tmp
        args:
          - "--global.checknewversion"
          - "--global.sendanonymoususage"
          - "--entryPoints.metrics.address=:9100/tcp"
          - "--entryPoints.traefik.address=:9000/tcp"
          - "--entryPoints.web.address=:8000/tcp"
          - "--entryPoints.websecure.address=:8443/tcp"
          - "--api=true"
          - "--api.dashboard=true"
          - "--api.debug=true"
          - "--api.insecure=true"
          - "--ping=true"
          - "--metrics.prometheus=true"
          - "--metrics.prometheus.entrypoint=metrics"
          - "--accesslog=true"
          - "--accesslog.format=json"
          - "--providers.kubernetesingress"
          - "--log=true"
          - "--log.format=json"
          - "--log.level=ERROR"
          # - "--providers.kubernetescrd"
      volumes:
        - name: data
          emptyDir: {}
        - name: tmp
          emptyDir: {}
      securityContext:
        fsGroup: 65532

---
apiVersion: v1
kind: Service
metadata:
  name: traefik
  namespace: kube-ingress
  labels:
    app.kubernetes.io/name: traefik
    helm.sh/chart: traefik-10.3.2
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/instance: traefik
  annotations:
spec:
  type: NodePort
  selector:
    app.kubernetes.io/name: traefik
    app.kubernetes.io/instance: traefik
  ports:
  - name: web
    port: 80
    targetPort: "web"
    protocol: "TCP"
    nodePort: 30001
  - name: websecure
    port: 443
    targetPort: "websecure"
    protocol: "TCP"
    nodePort: 30002
  - name: traefik
    port: 9000
    targetPort: "traefik"
    protocol: "TCP"
